--- a/style.css
+++ b/style.css
@@ -2,3 +2,39 @@
     padding: 0px;
     margin: 0px;
 }
+body{
+    background-color: #8FD6E1;
+    color:white;
+    font-size: 24px;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+}
+.logo{
+    height: 120px;
+    margin-top: 4px;
+}
+.header{
+    padding-left: 30px;
+    padding-right: 30px;
+    background-color: #e3e3e3;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    height: 150px;
+}
+.left-header{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+.left-header-content{
+    display:flex;
+    flex-direction: column; 
+}
+.left-header-text-upper{
+    font-weight: bold;
+    margin-bottom: 5px;
+}
+.left-header-text-lower{
+    font-size:medium;
+    color:black;
+}
