--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ body{
 .header{
     padding-left: 30px;
     padding-right: 30px;
-    background-color: #e3e3e3;
+    background-color: #04293A;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -37,4 +37,32 @@ body{
 .left-header-text-lower{
     font-size:medium;
     color:black;
+}
+.right-header{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+.right-header-content{
+    display:flex;
+    flex-direction: row;
+    align-items: center;
+    animation-name: right_animation;
+    animation-duration: 3s;
+}
+.right-header-content > a{
+    margin-right: 10px;
+}
+.right-header-content > a{
+    text-decoration: none;
+    font-size: 20px;
+    color: white;
+}
+.right-header-content > a:hover{
+    cursor: pointer;
+    color: rgb(0, 0, 0);
+}
+.right-header-content > a:active{
+    cursor: pointer;
+    color: rgb(255, 0, 0);
 }
