--- a/style.css
+++ b/style.css
@@ -66,3 +66,17 @@ body{
     cursor: pointer;
     color: rgb(255, 0, 0);
 }
+.footer{
+    background-color: black;
+    padding-left: 20px;
+    padding-right: 20px;
+    color:rgb(80,80,80);
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    font-size: medium;
+    height: 120px;
+    padding-right: 50px;
+    padding-left: 50px;
+}
