--- a/style.css
+++ b/style.css
@@ -48,8 +48,6 @@ body{
     display:flex;
     flex-direction: row;
     align-items: center;
-    animation-name: right_animation;
-    animation-duration: 3s;
 }
 .right-header-content > a{
     margin-right: 10px;
@@ -98,4 +96,12 @@ body{
 }
 .footer > div> span{
     margin-left: 530px;
+}.welcome{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: 780px;
+    width: auto;
+    padding:45px;
+    font-size: 100px;
 }
